Change the app's flavor color to light green

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#222222</color>
     <color name="colorPrimaryLight">#727272</color>
     <color name="colorAccent">@color/flavor</color>
-    <color name="flavor">#43FA00</color>
+    <color name="flavor">#45FF00</color>
 </resources>
