--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -47,4 +47,16 @@
         app:layout_constraintLeft_toLeftOf="@id/text_project_title"
         app:layout_constraintRight_toRightOf="@id/text_project_title"
         app:layout_constraintTop_toBottomOf="@id/text_project_title" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:onClick="showReminderNotification"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/ic_popup_reminder" />
 </androidx.constraintlayout.widget.ConstraintLayout>
