--- a/app/src/main/res/layout/content_project.xml
+++ b/app/src/main/res/layout/content_project.xml
@@ -8,6 +8,19 @@
     tools:context="com.zakariyaf.DevLog.ProjectActivity"
     tools:showIn="@layout/activity_project">
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:max="3"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Spinner
         android:id="@+id/spinner_courses"
         android:layout_width="0dp"
@@ -55,7 +68,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
-        android:onClick="showReminderNotification"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_popup_reminder" />
